--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,9 @@
+require:
+  - rubocop-rspec
 AllCops:
   NewCops: enable
-  Exclude:
-    - 'vendor/**/*'
-    - 'spec/fixtures/**/*'
-    - 'tmp/**/*'
-    - '.git/**/*'
-    - 'bin/*'
 Style/Documentation:
   Enabled: false
-Lint/MissingSuper:
-  Enabled: false
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
